--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -532,11 +532,38 @@ body.menu-open {
         font-size: 16px;
     }
     .user-list {
-        height: 240px; /* Approx. 5 users at 42px each */
+        height: 240px;
     }
     .user-list li {
         font-size: 14px;
         padding: 12px 15px;
+    }
+    .modal-content {
+        width: 95%;
+        padding: 15px;
+    }
+    .modal-content h3 {
+        font-size: 16px;
+    }
+    .modal-content p {
+        font-size: 14px;
+    }
+    .modal-actions button {
+        padding: 6px 12px;
+        font-size: 14px;
+    }
+    .modal-content select {
+        font-size: 14px;
+        padding: 6px;
+    }
+    .remove-user-btn, .edit-user-btn {
+        width: 20px;
+        height: 20px;
+        font-size: 12px;
+    }
+    .footer-icon img {
+        width: 35px;
+        height: 35px;
     }
 }
 
@@ -545,6 +572,138 @@ body.menu-open {
 .footer {
     z-index: 100;
 }
+
+
+
+
+
+/* Modal Base Styles */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--modal-bg);
+    z-index: 1100;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+.modal.show {
+    display: block;
+    opacity: 1;
+}
+.modal-content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #2A2B32;
+    border-radius: 12px;
+    padding: 20px;
+    width: 90%;
+    max-width: 400px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+}
+.modal-content h3 {
+    margin: 0 0 15px;
+    font-size: 18px;
+    color: var(--text-color);
+}
+.modal-content p {
+    margin: 0 0 15px;
+    font-size: 16px;
+    color: var(--text-color);
+}
+.modal-actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+.modal-actions button {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 6px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.2s ease;
+}
+.modal-actions button:first-child {
+    background: #D32F2F;
+    color: white;
+}
+.modal-actions button:first-child:hover {
+    background: #B71C1C;
+}
+.modal-actions button:last-child {
+    background: #4CAF50;
+    color: white;
+}
+.modal-actions button:last-child:hover {
+    background: #388E3C;
+}
+
+/* Permission Modal Specific */
+.modal-content select {
+    width: 100%;
+    padding: 8px;
+    border-radius: 6px;
+    background: #333;
+    color: var(--text-color);
+    border: 1px solid var(--border-dark);
+    margin-bottom: 15px;
+    font-size: 16px;
+}
+#savePermissionBtn {
+    background: var(--primary-color);
+    color: #212121;
+}
+#savePermissionBtn:hover {
+    background: #FFD54F;
+}
+
+/* User List Item Adjustments */
+.user-list li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 20px;
+}
+.user-list-item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    flex-grow: 1;
+}
+.user-list-actions {
+    display: flex;
+    gap: 8px;
+}
+.remove-user-btn, .edit-user-btn {
+    background: #D32F2F;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    width: 24px;
+    height: 24px;
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background 0.2s ease;
+}
+.edit-user-btn {
+    background: #2196F3;
+}
+.remove-user-btn:hover {
+    background: #B71C1C;
+}
+.edit-user-btn:hover {
+    background: #1976D2;
+}
+
 /* Bottom Sheet Modal when selecting users */
 
 
@@ -590,7 +749,7 @@ body.menu-open {
 
   <div id="taskContainer">Loading tasks...</div>
 
-
+<!-- User Selection ----------------------------->
   <div class="bottom-sheet" id="userSelectModal">
     <div class="bottom-sheet-content">
         <div class="bottom-sheet-header">
@@ -603,7 +762,32 @@ body.menu-open {
 
 
 
+<!-- Confirm Delete Modal -->
+<div class="modal" id="confirmModal">
+  <div class="modal-content">
+      <p>Are you sure you want to delete this user?</p>
+      <div class="modal-actions">
+          <button id="confirmYesBtn">Yes</button>
+          <button id="confirmNoBtn">No</button>
+      </div>
+  </div>
+</div>
 
+<!-- Permission Modal -->
+<div class="modal" id="permissionModal">
+  <div class="modal-content">
+      <h3 id="permissionModalUser">Permissions for User</h3>
+      <select id="permissionSelect">
+          <option value="User">User</option>
+          <option value="Admin">Admin</option>
+      </select>
+      <div class="modal-actions">
+          <button id="savePermissionBtn">Save</button>
+      </div>
+  </div>
+</div>
+
+<!-- User Selection ----------------------------->
 
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
@@ -669,7 +853,67 @@ async function fetchUsersFromServer(email) {
 }
 
 
-// User selection modal logic
+// User selection ///////////////////////////////////////////////////////////////////////
+
+
+
+
+
+
+// Helper function to delete a user from the server
+async function deleteUserFromServer(username) {
+    try {
+        const res = await fetch(
+            `https://beemazing.onrender.com/delete-user?adminEmail=${encodeURIComponent(adminEmail)}&username=${encodeURIComponent(username)}`,
+            {
+                method: "DELETE",
+                headers: { "Content-Type": "application/json" }
+            }
+        );
+        const result = await res.json();
+        if (result.success) {
+            const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
+            let users = allUserData[adminEmail]?.users || [];
+            users = users.filter(user => user !== username);
+            allUserData[adminEmail].users = users;
+            localStorage.setItem("userData", JSON.stringify(allUserData));
+            return true;
+        } else {
+            alert("Failed to delete user: " + result.message);
+            return false;
+        }
+    } catch (err) {
+        console.error("Failed to delete user:", err);
+        alert("Error deleting user. Please try again.");
+        return false;
+    }
+}
+
+// Show confirmation modal for deletion
+let userToRemove = null;
+function showConfirmModal(username) {
+    userToRemove = username;
+    document.getElementById("confirmModal").classList.add("show");
+}
+
+// Show permission modal for editing
+let selectedUserForPermission = null;
+function showPermissionModal(username) {
+    selectedUserForPermission = username;
+    const permissionModalUser = document.getElementById("permissionModalUser");
+    const permissionSelect = document.getElementById("permissionSelect");
+    permissionModalUser.textContent = `Permissions for ${username}`;
+    const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
+    const userPermissions = allUserData[adminEmail]?.permissions || {};
+    permissionSelect.value = userPermissions[username] || "User";
+    document.getElementById("permissionModal").classList.add("show");
+}
+
+
+
+
+// User selection
+const isAdmin = localStorage.getItem("isAdmin") === "true";
 const profileIcon = document.getElementById("profileIcon");
 const userSelectModal = document.getElementById("userSelectModal");
 const userList = document.getElementById("userList");
@@ -680,23 +924,61 @@ profileIcon.addEventListener("click", async () => {
         return;
     }
     const users = await fetchUsersFromServer(adminEmail);
+    const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
+    const userPermissions = allUserData[adminEmail]?.permissions || {};
     userList.innerHTML = '';
     if (users.length === 0) {
         alert("No users found for this admin.");
         userList.innerHTML = '<li style="padding: 15px 20px; color: #D32F2F;">No users available</li>';
     } else {
-      users.forEach(user => {
-    const li = document.createElement("li");
-    li.textContent = user;
-    if (user === userName) {
-        li.style.background = "#333540";
-        li.style.fontWeight = "600";
-    }
-    li.addEventListener("click", () => {
-        window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(user)}`;
-    });
-    userList.appendChild(li);
-});
+        users.forEach(user => {
+            const li = document.createElement("li");
+            const nameContainer = document.createElement("div");
+            nameContainer.classList.add("user-list-item");
+            const userNameSpan = document.createElement("span");
+            userNameSpan.textContent = user;
+            nameContainer.appendChild(userNameSpan);
+            if (userPermissions[user] === "Admin") {
+                const checkmark = document.createElement("span");
+                checkmark.textContent = "✓";
+                checkmark.style.color = "#00C4B4";
+                checkmark.style.fontSize = "16px";
+                checkmark.style.fontWeight = "bold";
+                checkmark.title = "Admin";
+                nameContainer.appendChild(checkmark);
+            }
+            li.appendChild(nameContainer);
+            if (isAdmin) {
+                const actionsContainer = document.createElement("div");
+                actionsContainer.classList.add("user-list-actions");
+                const editBtn = document.createElement("button");
+                editBtn.classList.add("edit-user-btn");
+                editBtn.innerHTML = "⚙️";
+                editBtn.addEventListener("click", (event) => {
+                    event.stopPropagation();
+                    showPermissionModal(user);
+                });
+                const removeBtn = document.createElement("button");
+                removeBtn.classList.add("remove-user-btn");
+                removeBtn.textContent = "X";
+                removeBtn.addEventListener("click", (event) => {
+                    event.stopPropagation();
+                    showConfirmModal(user);
+                });
+                actionsContainer.appendChild(editBtn);
+                actionsContainer.appendChild(removeBtn);
+                li.appendChild(actionsContainer);
+            }
+            if (user === userName) {
+                li.style.background = "#333540";
+                li.style.fontWeight = "600";
+            }
+            li.addEventListener("click", () => {
+                const page = userPermissions[user] === "Admin" ? "userAdmin.html" : "users.html";
+                window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/${page}?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(user)}`;
+            });
+            userList.appendChild(li);
+        });
     }
     userSelectModal.classList.add("show");
 });
@@ -708,6 +990,177 @@ userSelectModal.addEventListener("click", (e) => {
 closeModalBtn.addEventListener("click", () => {
     userSelectModal.classList.remove("show");
 });
+
+// ConfirmModal event listeners
+const confirmModal = document.getElementById("confirmModal");
+const confirmYesBtn = document.getElementById("confirmYesBtn");
+const confirmNoBtn = document.getElementById("confirmNoBtn");
+confirmYesBtn.addEventListener("click", async () => {
+    if (userToRemove) {
+        const success = await deleteUserFromServer(userToRemove);
+        if (success) {
+            userToRemove = null;
+            confirmModal.classList.remove("show");
+            const users = await fetchUsersFromServer(adminEmail);
+            userList.innerHTML = '';
+            const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
+            const userPermissions = allUserData[adminEmail]?.permissions || {};
+            users.forEach(user => {
+                const li = document.createElement("li");
+                const nameContainer = document.createElement("div");
+                nameContainer.classList.add("user-list-item");
+                const userNameSpan = document.createElement("span");
+                userNameSpan.textContent = user;
+                nameContainer.appendChild(userNameSpan);
+                if (userPermissions[user] === "Admin") {
+                    const checkmark = document.createElement("span");
+                    checkmark.textContent = "✓";
+                    checkmark.style.color = "#00C4B4";
+                    checkmark.style.fontSize = "16px";
+                    checkmark.style.fontWeight = "bold";
+                    checkmark.title = "Admin";
+                    nameContainer.appendChild(checkmark);
+                }
+                li.appendChild(nameContainer);
+                if (isAdmin) {
+                    const actionsContainer = document.createElement("div");
+                    actionsContainer.classList.add("user-list-actions");
+                    const editBtn = document.createElement("button");
+                    editBtn.classList.add("edit-user-btn");
+                    editBtn.innerHTML = "⚙️";
+                    editBtn.addEventListener("click", (event) => {
+                        event.stopPropagation();
+                        showPermissionModal(user);
+                    });
+                    const removeBtn = document.createElement("button");
+                    removeBtn.classList.add("remove-user-btn");
+                    removeBtn.textContent = "X";
+                    removeBtn.addEventListener("click", (event) => {
+                        event.stopPropagation();
+                        showConfirmModal(user);
+                    });
+                    actionsContainer.appendChild(editBtn);
+                    actionsContainer.appendChild(removeBtn);
+                    li.appendChild(actionsContainer);
+                }
+                if (user === userName) {
+                    li.style.background = "#333540";
+                    li.style.fontWeight = "600";
+                }
+                li.addEventListener("click", () => {
+                    const page = userPermissions[user] === "Admin" ? "userAdmin.html" : "users.html";
+                    window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/${page}?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(user)}`;
+                });
+                userList.appendChild(li);
+            });
+        }
+    }
+});
+confirmNoBtn.addEventListener("click", () => {
+    userToRemove = null;
+    confirmModal.classList.remove("show");
+});
+confirmModal.addEventListener("click", (e) => {
+    if (e.target === confirmModal) {
+        userToRemove = null;
+        confirmModal.classList.remove("show");
+    }
+});
+
+// PermissionModal event listeners
+const permissionModal = document.getElementById("permissionModal");
+const savePermissionBtn = document.getElementById("savePermissionBtn");
+savePermissionBtn.addEventListener("click", async () => {
+    const allUserData = JSON.parse(localStorage.getItem("userData")) || {};
+    if (!allUserData[adminEmail]) {
+        allUserData[adminEmail] = { users: [], permissions: {} };
+    }
+    if (!allUserData[adminEmail].permissions) {
+        allUserData[adminEmail].permissions = {};
+    }
+    if (selectedUserForPermission) {
+        allUserData[adminEmail].permissions[selectedUserForPermission] = document.getElementById("permissionSelect").value;
+        localStorage.setItem("userData", JSON.stringify(allUserData));
+        try {
+            const res = await fetch("https://beemazing.onrender.com/save-permissions", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    adminEmail,
+                    permissions: allUserData[adminEmail].permissions
+                })
+            });
+            const result = await res.json();
+            if (!result.success) {
+                console.warn("Failed to save permissions to server");
+            }
+        } catch (err) {
+            console.error("Error saving permissions:", err);
+        }
+        permissionModal.classList.remove("show");
+        const users = await fetchUsersFromServer(adminEmail);
+        userList.innerHTML = '';
+        const updatedUserData = JSON.parse(localStorage.getItem("userData")) || {};
+        const userPermissions = updatedUserData[adminEmail]?.permissions || {};
+        users.forEach(user => {
+            const li = document.createElement("li");
+            const nameContainer = document.createElement("div");
+            nameContainer.classList.add("user-list-item");
+            const userNameSpan = document.createElement("span");
+            userNameSpan.textContent = user;
+            nameContainer.appendChild(userNameSpan);
+            if (userPermissions[user] === "Admin") {
+                const checkmark = document.createElement("span");
+                checkmark.textContent = "✓";
+                checkmark.style.color = "#00C4B4";
+                checkmark.style.fontSize = "16px";
+                checkmark.style.fontWeight = "bold";
+                checkmark.title = "Admin";
+                nameContainer.appendChild(checkmark);
+            }
+            li.appendChild(nameContainer);
+            if (isAdmin) {
+                const actionsContainer = document.createElement("div");
+                actionsContainer.classList.add("user-list-actions");
+                const editBtn = document.createElement("button");
+                editBtn.classList.add("edit-user-btn");
+                editBtn.innerHTML = "⚙️";
+                editBtn.addEventListener("click", (event) => {
+                    event.stopPropagation();
+                    showPermissionModal(user);
+                });
+                const removeBtn = document.createElement("button");
+                removeBtn.classList.add("remove-user-btn");
+                removeBtn.textContent = "X";
+                removeBtn.addEventListener("click", (event) => {
+                    event.stopPropagation();
+                    showConfirmModal(user);
+                });
+                actionsContainer.appendChild(editBtn);
+                actionsContainer.appendChild(removeBtn);
+                li.appendChild(actionsContainer);
+            }
+            if (user === userName) {
+                li.style.background = "#333540";
+                li.style.fontWeight = "600";
+            }
+            li.addEventListener("click", () => {
+                const page = userPermissions[user] === "Admin" ? "userAdmin.html" : "users.html";
+                window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/${page}?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(user)}`;
+            });
+            userList.appendChild(li);
+        });
+    }
+});
+permissionModal.addEventListener("click", (e) => {
+    if (e.target === permissionModal) {
+        permissionModal.classList.remove("show");
+    }
+});
+
+
+// User selection /////////////////////////////////////////////////////////////////////// 
+
 
 
 // Set active state
