--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -828,19 +828,24 @@
 }
 
 .user-list li {
-  padding: 12px 16px;
-  margin-bottom: 10px;
-  background: var(--secondary-color);
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 18px;
-  transition: background 0.2s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 14px 20px;
+    margin: 8px 12px;
+    background: #2F3038;
+    border-radius: 10px;
+    font-size: 15px;
+    color: var(--text-color);
+    cursor: pointer;
+    transition: background 0.2s ease, transform 0.2s ease;
+    border: 1px solid var(--border-dark);
+}
+.user-list li:hover {
+    background: #3A3B44;
+    transform: scale(1.01);
 }
 
-.user-list li:hover {
-  background: var(--primary-color);
-  color: var(--secondary-color);
-}
 
 .close-btn {
   background: none;
@@ -942,7 +947,7 @@
     <div class="footer">
       <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
           <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-          <span>Home</span>
+          <span>Home 1</span>
       </a>
       <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
           <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
