--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -791,68 +791,94 @@
 
 /* 👇 Add these missing styles for userSelectModal to work */
 .bottom-sheet {
-  position: fixed;
-  bottom: -100%;
-  left: 0;
-  width: 100%;
-  background: var(--card-bg);
-  color: var(--text-color);
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
-  transition: bottom 0.3s ease-in-out;
-  z-index: 1100;
-  padding: 20px;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--modal-bg);
+    z-index: 1000;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
-
 .bottom-sheet.show {
-  bottom: 0;
+    display: block;
+    opacity: 1;
 }
-
 .bottom-sheet-content {
-  max-height: 80vh;
-  overflow-y: auto;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-height: 70vh;
+    background: #2A2B32;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5);
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
 }
-
+.bottom-sheet.show .bottom-sheet-content {
+    transform: translateY(0);
+}
 .bottom-sheet-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-.user-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.user-list li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 14px 20px;
-    margin: 8px 12px;
-    background: #2F3038;
-    border-radius: 10px;
-    font-size: 15px;
+    padding: 15px 20px;
+    border-bottom: 1px solid var(--border-dark);
+}
+.bottom-sheet-header h3 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--text-color);
+}
+.bottom-sheet-header .close-btn {
+    background: none;
+    border: none;
+    color: var(--text-color);
+    font-size: 24px;
+    cursor: pointer;
+    padding: 5px;
+}
+.bottom-sheet-header .close-btn:hover {
+    color: var(--primary-color);
+}
+.user-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 240px; /* Approx. 5 users at 48px each */
+    overflow-y: auto;
+}
+.user-list li {
+    padding: 15px 20px;
+    border-bottom: 1px solid var(--border-dark);
+    font-size: 16px;
     color: var(--text-color);
     cursor: pointer;
-    transition: background 0.2s ease, transform 0.2s ease;
-    border: 1px solid var(--border-dark);
+    transition: background 0.2s ease;
 }
 .user-list li:hover {
-    background: #3A3B44;
-    transform: scale(1.01);
+    background: #333540;
 }
-
-
-.close-btn {
-  background: none;
-  border: none;
-  font-size: 28px;
-  color: var(--text-color);
-  cursor: pointer;
+.user-list li:last-child {
+    border-bottom: none;
+}
+.user-list::-webkit-scrollbar {
+    width: 8px;
+}
+.user-list::-webkit-scrollbar-track {
+    background: #2A2B32;
+}
+.user-list::-webkit-scrollbar-thumb {
+    background: #444754;
+    border-radius: 4px;
+}
+.user-list::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 
